@@ -1,3 +1,8 @@
+2018-02-11         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* intdiv.c (do_intdiv): Print a warning about loss of precision if
+	MPFR arguments are received when not compiled with MPFR support.
+
 2018-02-08         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
 	* configure.ac (pkgextensiondir): This must be set to
